manifests/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: argocd-funge3
  labels:
    app: argocd-funge3
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: binco97-dev
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: argocd-funge3
